# buteo

./: .gitignore  .pylintrc  .zenodo.json  CITATION.CFF  LICENSE  bbox_refactor_plan.md  build.py  build_anaconda.py  build_documentation.py  build_packages.py  build_script  calc.py  clean_build_folder.py  environment.yaml  environment.yml  evaluate.py  formulas.py  gui.py  gui_form.py  gui_func.py  gui_tools.py  index.py  indexFunc.py  indices.py  io.py  main.py  meta.yaml  path_to_v1.md  pyproject.toml  readme.md  readme.me  refactor_plan.md  requirements.txt  requirements_gui.txt  rstats.py  run.py  run_tests.py  sentinelHelper.py  setup.cfg  setup.py  (+5 more)
analysis/: calc_local_statistics.py  classify.py  clean_data.py  local_stats.py  meanshifting.py  med_test.py  rf_feature_selection.py  super-sample.py  test.py  tests.py  urban_segmentation_zonal.py  voting_classifier.py
backup/: c_mosaic.py  combine_csv.py  csv_sampler.py  download.py  mosaic.py  numerical_descriptive_measures.py  scale.py  temp.py  utilities.py  zonal_statistics_old.py  zonal_statistics_worker.py
buteo/: __init__.py  basic.py  environment.yaml  gdal_utils.py  orfeo_toolbox.py  project_types.py  utils.py
cython/: c_filter.c  c_filter.html  c_filter.pyx  c_test.html  c_test.pyx  kernel_functions.py  setup.c  setup.py  test.py  weighted_standardDeviation.py
debug/: debug4.py  debug6.py  debug7.py
docs/: ai.html  bbox.html  buteo.html  core.html  eo.html  gdal_enums.html  gdal_utils.html  index.html  io.html  orfeo_toolbox.html  project_types.html  search.js  utils.html  vector.html
docs_assets/: doc_template.html.jinja  module.html.jinja2
earth_engine/: README.txt  download_and_export_single_image.py  ezra_test.py
examples/: analysis_cnn.py  analysis_paper2.py  analysis_viz.py  band.py  blocks_to_array.ipynb  buildings.py  circular.py  classifiy.py  clip_and_remove_noise_raster.ipynb  clip_layers.py  clip_raster_example.py  clustering.py  create_labels_from_osm_data.ipynb  create_mosaic_s1.py  cross.py  cu.py  dk_grid.py  filtering.py  filters_and_morphology.ipynb  generate_patches.ipynb  geocode.py  good_examples.py  gradient_boosting.py  k_means.py  kernel_viz.drawio  med_test2.py  merge.py  ml_utils.py  morphology.py  mosaic_tool copy.py  mosaic_tool.py  mosaic_tool_backup.py  multicriteria.py  nightlights.py  norm_tests.py  paper2.py  patch_extraction.py  patch_extraction_new.py  phase1.py  (+36 more)
(+1164 files in other folders)
