[build-system]
requires = ["flit_core>=3.7.1", "numba>=0.56.2", "psutil>=5.4.8", "PyYAML>=6.0"]
build-backend = "flit_core.buildapi"

[project]
name = "buteo"
version = "0.7.61"
authors = [
  { name="Casper Fibaek", email="casperfibaek@gmail.com" },
]
description = "Geospatial tools for raster preprocessing and EO work."
readme = "readme.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numba>=0.56",
  "psutil>=5.4.8",
]

[project.urls]
"Homepage" = "https://github.com/casperfibaek/buteo"
"Bug Tracker" = "https://github.com/casperfibaek/buteo/issues"