[build-system]
requires = ["flit_core>=3.8.0", "numba>=0.57.0", "psutil>=5.9.5", "PyYAML>=6.0", "tqdm>=4.65.0"]
build-backend = "flit_core.buildapi"

[project]
name = "buteo"
version = "0.9.38"
authors = [
  { name="Casper Fibaek", email="casperfibaek@gmail.com" },
]
description = "Tools for merging Geospatial Analysis and AI."
readme = "readme.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numba>=0.57",
  "psutil>=5.9.5",
  "tqdm>=4.65.0",
]

[project.urls]
"Homepage" = "https://github.com/casperfibaek/buteo"
"Bug Tracker" = "https://github.com/casperfibaek/buteo/issues"